--- a/_sass/wrappers.scss
+++ b/_sass/wrappers.scss
@@ -8,6 +8,7 @@ html, body {
 }
 body {
 	background-color: $background-color-light;
+	background-color: #ece7e2;
 	color: $text-color-dark;
 	font-family: $font-main;
 	font-size: $font-size;
@@ -25,7 +26,7 @@ body {
 	}
 }
 .content {
-	background-color: $background-color-light;
+	background-color: transparent;
 	clear: both;
 	// height: 100%; // uncomment this if you're not using sticky-footer.js
 	.content-inner {
