--- a/_sass/masthead.scss
+++ b/_sass/masthead.scss
@@ -39,7 +39,7 @@
 			padding: 0 0 0 1em;
 			vertical-align: middle;
 			font-size: 0.7em;
-			font-family: $font-main;
+			font-family: $font-secondary;
 		}
 	}
 }
