--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -7,7 +7,8 @@
 	@media only screen and (min-width: $break-point-l) {
 		height: 100%;
 		padding: $line-height * 1em;
-		position: relative;
+		// position: relative;
+		position: fixed;
 		background-color: $side-nav-color;
 		min-width: $side-nav-width;
 		margin-right: $line-height * 1em;
@@ -22,6 +23,7 @@
 	    right: 0.5em;
 	    top: 0;
 	    z-index: 10; // show above masthead
+	    color: $background-color-mid;
 	    @media only screen and (min-width: $break-point-l) {
 	    	display: none;
 	    }
@@ -108,12 +110,15 @@
 			position: relative;
 			left: 0;
 			top: 0;
+			top: 6em;
 			padding: 0;
 			ul {
 				display: block;
 				width: 100%;
 				float: none;
 				font-size: $side-nav-font-size;
+				font-weight: 800;
+				color: $background-color-dark;
 				li {
 					margin: 1em 1em 0 0;
 					display: block;
