Fix meta description

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="{{ site.data.settings.url }}{{ page.url }}" />
 		<meta property="og:image" content="{{ site.data.settings.url }}/images/{% if page.image %}{{ page.image }}{% else %}{{ site.data.settings.image }}{% endif %}" />
-		<meta property="og:description" content="{% if page.description %}{{ page.description | markdownify | strip_html }}{% else %}{{ page.excerpt | markdownify | strip_html }}{% endif %}" />
+		<meta property="og:description" content="{% if page.description and page.description != "" %}{{ page.description | markdownify | strip_html }}{% elsif page.excerpt and page.excerpt != "" %}{{ page.excerpt | markdownify | strip_html }}{% else %}{{ site.data.settings.description }}{% endif %}" />
 		<meta property="og:site_name" content="{{ site.data.settings.name }}" />
 
 		<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/styles.css" />
