--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,11 +4,11 @@
 	{% if site.data.locales[site.data.settings.language].direction and site.data.locales[site.data.settings.language].direction != "" %} dir="{{ site.data.locales[language].direction }}"{% endif %}>
 
 	<head>
-		<title>{{ site.data.settings.name }}: {{ page.title | markdownify | strip_html }}</title>
+		<title>{{ site.data.settings.name }}{% if page.title and page.title != "" %}: {{ page.title | markdownify | strip_html }}{% endif %}</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-		<meta property="og:title" content="{{ site.data.settings.name }}: {{ page.title | markdownify | strip_html }}" />
+		<meta property="og:title" content="{{ site.data.settings.name }}{% if page.title and page.title != "" %}: {{ page.title | markdownify | strip_html }}{% endif %}" />
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="{{ site.data.settings.url }}{{ page.url }}" />
 		<meta property="og:image" content="{{ site.data.settings.url }}/images/{% if page.image %}{{ page.image }}{% else %}{{ site.data.settings.image }}{% endif %}" />
