--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,6 +9,11 @@
         <nav>
             <ul>
                 {% include nav-list.html %}
+                <li class="social">
+                    <a href="https://www.facebook.com/onedayonebookevent">
+                        <img src="{{ site.baseurl }}/images/F_icon.svg">
+                    </a>
+                </li>
             </ul>
         </nav>
 
