--- a/css/styles.scss
+++ b/css/styles.scss
@@ -144,6 +144,14 @@ a {
 img {
 	max-width: 100%;
 }
+// Thumbnails
+.thumbnail {
+    width: 10em;
+    max-width: 50%;
+    float: right;
+    margin: 0 0 1em 1em;
+    box-shadow: 0px 0px 5px #ccc;
+}
 nav {
 	.social {
 		clear: both;
