WIP: create separate book pages and add new copy

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,12 @@ Use footer-cell divs to create columns. {% endcomment %}
 
 		<div class="footer">
 			<div class="footer-cell">
+				<img src="{{ site.baseurl }}/images/world-bank-logo.svg">
+			</div>
+			<div class="footer-cell">
+				<img src="{{ site.baseurl }}/images/world-bank-logo.svg">
+			</div>
+			<div class="footer-cell">
 				<p>{{ site.data.locales[site.data.settings.language].footer.credit | markdownify | replace: "<p>", "" | replace: "</p>", "" }}</p>
 			</div>
 		</div><!--.footer-->
