--- a/_includes/book-page.html
+++ b/_includes/book-page.html
@@ -1,33 +1,111 @@
-# {{ page.title }}
+<h1>{{ page.title }}</h1>
 
-Originally written in {{ page.original-language }}.
-{:.subheadline}
+{% if page.original-language and page.original-language != "" %}
+	<p class="subheadline">Originally written in {{ page.original-language }}.</p>
+{% endif %}
 
 {{ page.description }}
 
-- Written by {{ page.contributors.writer }}
-- Illustrated by {{ page.contributors.illustrator }}
-- Designed by {{ page.contributors.designer }}
-- Edited by {{ page.contributors.editor }}
+<ul>
+	{% if page.contributors.writer and page.contributors.writer != "" %}
+		<li>Written by {{ page.contributors.writer }}</li>
+	{% endif %}
+	{% if page.contributors.illustrator and page.contributors.illustrator != "" %}
+		<li>Illustrated by {{ page.contributors.illustrator }}</li>
+	{% endif %}
+	{% if page.contributors.designer and page.contributors.designer != "" %}
+		<li>Designed by {{ page.contributors.designer }}</li>
+	{% endif %}
+	{% if page.contributors.editor and page.contributors.editor != "" %}
+		<li>Edited by {{ page.contributors.editor }}</li>
+	{% endif %}
+</ul>
 
-Supported by [{{ page.contributors.publisher }}]({{ page.links.publisher-url }})
-{% include image file=page.publisher-logo class="book-publisher-logo" %}
+{% if page.contributors.publisher and page.contributors.publisher != "" %}
 
-[Download PDF]({{ page.links.source-files }}){:.button}
-[Source files]({{ page.links.pdf-ebook }}){:.button}
+	{% if page.images.publisher-logo and page.images.publisher-logo != "" %}
+		{% include image file=page.images.publisher-logo class="book-publisher-logo" %}
+	{% endif %}
 
-{% include image file=page.images.cover class="cover" %}
+	<p>
+		Supported by 
+			{% if page.links.publisher-url and page.links.publisher-url != "" %}
+				<a href="{{ page.links.publisher-url }}">
+			{% endif %}
+		{{ page.contributors.publisher }}
+			{% if page.links.publisher-url and page.links.publisher-url != "" %}
+				</a>
+			{% endif %}
+		</a>
+	</p>
 
-{% include image file=page.title-page class="title-page" %}
-{% include image file=page.dps-1 class="dps-1" %}
-{% include image file=page.dps-2 class="dps-2" %}
-{% include image file=page.dps-3 class="dps-3" %}
-{% include image file=page.dps-4 class="dps-4" %}
-{% include image file=page.dps-5 class="dps-5" %}
-{% include image file=page.dps-6 class="dps-6" %}
-{% include image file=page.dps-7 class="dps-7" %}
-{% include image file=page.dps-8 class="dps-8" %}
-{% include image file=page.dps-9 class="dps-9" %}
-{% include image file=page.dps-10 class="dps-10" %}
-{% include image file=page.dps-11 class="dps-11" %}
-{% include image file=page.copyright-page class="copyright-page" %}
+{% endif %}
+
+<div class="book-links">
+	{% if page.links.pdf-ebook and page.links.pdf-ebook != "" %}
+		<a href="{{ page.links.pdf-ebook }} class="button">Download PDF</a>
+	{% endif %}
+	{% if page.links.source-files and page.links.source-files != "" %}
+		<a href="{{ page.links.source-files }} class="button">Source files</a>
+	{% endif %}
+</div>
+
+<div class="book-images">
+
+	{% if page.images.cover and page.images.cover != "" %}
+		{% include image file=page.images.cover class="cover" %}
+	{% endif %}
+
+	{% if page.images.title-page and page.images.title-page != "" %}
+		{% include image file=page.images.title-page class="title-page" %}
+	{% endif %}
+
+	{% if page.images.dps-1 and page.images.dps-1 != "" %}
+		{% include image file=page.images.dps-1 class="dps-1" %}
+	{% endif %}
+
+	{% if page.images.dps-2 and page.images.dps-2 != "" %}
+		{% include image file=page.images.dps-2 class="dps-2" %}
+	{% endif %}
+
+	{% if page.images.dps-3 and page.images.dps-3 != "" %}
+		{% include image file=page.images.dps-3 class="dps-3" %}
+	{% endif %}
+
+	{% if page.images.dps-4 and page.images.dps-4 != "" %}
+		{% include image file=page.images.dps-4 class="dps-4" %}
+	{% endif %}
+
+	{% if page.images.dps-5 and page.images.dps-5 != "" %}
+		{% include image file=page.images.dps-5 class="dps-5" %}
+	{% endif %}
+
+	{% if page.images.dps-6 and page.images.dps-6 != "" %}
+		{% include image file=page.images.dps-6 class="dps-6" %}
+	{% endif %}
+
+	{% if page.images.dps-7 and page.images.dps-7 != "" %}
+		{% include image file=page.images.dps-7 class="dps-7" %}
+	{% endif %}
+
+	{% if page.images.dps-8 and page.images.dps-8 != "" %}
+		{% include image file=page.images.dps-8 class="dps-8" %}
+	{% endif %}
+
+	{% if page.images.dps-9 and page.images.dps-9 != "" %}
+		{% include image file=page.images.dps-9 class="dps-9" %}
+	{% endif %}
+
+	{% if page.images.dps-10 and page.images.dps-10 != "" %}
+		{% include image file=page.images.dps-10 class="dps-10" %}
+	{% endif %}
+
+	{% if page.images.dps-11 and page.images.dps-11 != "" %}
+		{% include image file=page.images.dps-11 class="dps-11" %}
+	{% endif %}
+
+	{% if page.images.copyright-page and page.images.copyright-page != "" %}
+		{% include image file=page.images.copyright-page class="copyright-page" %}
+	{% endif %}
+
+</div>
