--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,11 +9,15 @@
         <nav>
             <ul>
                 {% include nav-list.html %}
+
+                {% comment %}
                 <li class="social">
                     <a href="https://www.facebook.com/onedayonebookevent">
                         <img src="{{ site.baseurl }}/images/F_icon.svg">
                     </a>
                 </li>
+                {% endcomment %}
+
             </ul>
         </nav>
 
