--- a/_sass/print.scss
+++ b/_sass/print.scss
@@ -1,12 +1,20 @@
 // Styles when printed out
 @media print {
-	body {
+	* {
+		position: initial!important;
+		overflow: visible!important;
+	}
+	html, body {
 		background-color: white;
+		overflow-x: auto;
 	}
 	.footer {
 		display: none;
 	}
 	button, a.button {
+		display: none;
+	}
+	.nav-wrapper {
 		display: none;
 	}
 }
