--- a/css/styles.scss
+++ b/css/styles.scss
@@ -48,19 +48,20 @@ $break-point-l: $content-width + $side-nav-width + 30em;
 // Import partials
 // These import snippets from _sass.
 // Comment out ones you definitely don't need.
-@import "wrappers";
-@import "typography";
+@import "excerpts";
+@import "footer";
+@import "gallery";
+@import "images";
+@import "input";
 @import "masthead";
 @import "nav";
-@import "footer";
-@import "input";
-@import "verse";
-@import "gallery";
-@import "toc";
 @import "page-nav";
-@import "excerpts";
 @import "polyfills";
 @import "print";
+@import "toc";
+@import "typography";
+@import "verse";
+@import "wrappers";
 
 // Custom CSS
 // Add your own styles below to override
@@ -182,6 +183,9 @@ blockquote {
 	margin-top: $line-height * 2em;
 	&:first-of-type {
 		margin-top: 0;
+	}
+	img {
+		max-width: 50%;
 	}
 }
 
