--- a/css/styles.scss
+++ b/css/styles.scss
@@ -216,6 +216,12 @@ blockquote {
 	margin-top: $line-height * 2em;
 }
 
+// Fineprint
+.fineprint {
+	font-size: $font-size * 0.8;
+	font-style: italic;
+}
+
 // Printing
 @media print {
 	.book-listing {
