Add links to Dropbox folders

--- a/_includes/book-page.html
+++ b/_includes/book-page.html
@@ -68,10 +68,10 @@
 	{% comment %}Download links{% endcomment %}
 	<div class="book-links">
 		{% if page.links.pdf-ebook and page.links.pdf-ebook != "" %}
-			<a href="{{ page.links.pdf-ebook }} class="button">Download PDF</a>
+			<a href="{{ page.links.pdf-ebook }}" class="button">Download PDF</a>
 		{% endif %}
 		{% if page.links.source-files and page.links.source-files != "" %}
-			<a href="{{ page.links.source-files }} class="button">Source files</a>
+			<a href="{{ page.links.source-files }}" class="button">Source files</a>
 		{% endif %}
 	</div>
 
