Fix Google Analytics

--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -1,9 +1,9 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-117914751-1"></script>
-		<script>
-		  window.dataLayer = window.dataLayer || [];
-		  function gtag(){dataLayer.push(arguments);}
-		  gtag('js', new Date());
+        <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.data.settings.google-analytics-id }}"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
 
-		  gtag('config', '{{ site.data.settings.google-analytics-id }}');
-		</script>
+          gtag('config', '{{ site.data.settings.google-analytics-id }}');
+        </script>
