--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,6 +28,10 @@
 		<meta name="msapplication-config" content="{{site.baseurl}}/images/icons/browserconfig.xml">
 		<meta name="theme-color" content="#ffffff">
 
+		{% if site.data.settings.google-analytics-id and site.data.settings.google-analytics-id != "" and site.data.settings.google-analytics-id != "UA-00000000-0" %}
+			{% include google-analytics.html  %}
+		{% endif %}
+
 	</head>
 
 <body class="{{ page.style }}">
